After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731878 - glvideomixer: Does not provide correct video resolution information when inputs are tiled
glvideomixer: Does not provide correct video resolution information when inpu...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.3.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-18 18:57 UTC by Joseph McDonald
Modified: 2014-06-28 08:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Joseph McDonald 2014-06-18 18:57:20 UTC
It appears that when given multiple inputs with information on how to place given inputs into the GL texture the output resolution of the texture does not reflect the newly modified texture size.  

e.g., two 320x240 videotestsrc feeds should, when combined along their xpos create an output video that is 640x240 pixels wide.  Unfortunately glvideomixer does not provide the correct caps downstream and as such unless they are explicitly stated the video sink will assume that the video is only 320x240.

Example pipeline to demonstrate the problem:

gst-launch-1.0 glvideomixer name=m sink_0::xpos=0 sink_1::xpos=320 ! glimagesink \
    videotestsrc ! m. \
    videotestsrc pattern=1 ! m.

Example pipeline to make it work:

gst-launch-1.0 glvideomixer name=m sink_0::xpos=0 sink_1::xpos=320 ! \
    video/x-raw,width=640,height=240 ! glimagesink \
    videotestsrc ! m. \
    videotestsrc pattern=1 ! m.

This should work similar to how the existing videomixer element functions, i.e.:

gst-launch-1.0 videomixer name=m sink_0::xpos=0 sink_1::xpos=320 ! ximagesink \
    videotestsrc ! m. \
    videotestsrc pattern=1 ! m.
Comment 1 Matthew Waters (ystreet00) 2014-06-25 02:03:45 UTC
commit c37ace184428e3096f57ccd89b67434eab632e6e
Author: Matthew Waters <ystreet00@gmail.com>
Date:   Wed Jun 25 12:00:34 2014 +1000

    glvideomixer: bas output width/height on the pad properties
    
    Allows automatic negotiation of the size in the following case:
    gst-launch-1.0 glvideomixer name=m sink_0::xpos=0 sink_1::xpos=320 ! glimagesink \
        videotestsrc ! m. \
        videotestsrc pattern=1 ! m.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731878